--- a/services/talk-booking/pyproject.toml
+++ b/services/talk-booking/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Keith Riordan <keith.riordan@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+Flask = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
