--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,26 @@ workflows:
     # Inside the workflow, you define the jobs you want to run. 
     # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows 
     jobs:
+      - build-image
       - build-and-test
 
 jobs:
+  build-image:
+    docker:
+      - image: cimg/base:2021.05
+    steps:
+      - checkout
+      - setup-remote-docker
+      - run:
+          name: Log in to Docker Hub
+          command: docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" 
+      - run:
+          name: Build python Docker image
+          command: docker build -t kriordan/talk-booking:cicd-python3.9-slim ./ci_cd/python/
+      - run:
+          name: Push Docker image to Docker Hub
+          command: docker push kriordan/talk-booking:cicd-python3.9-slim
+
   build-and-test:  # This is the name of the job, feel free to change it to better match what you're trying to do!
     # These next lines defines a Docker executors: https://circleci.com/docs/2.0/executor-types/
     # You can specify an image from Dockerhub or use one of the convenience images from CircleCI's Developer Hub
