--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - image: cimg/base:2021.05
     steps:
       - checkout
-      - setup-remote-docker
+      - setup_remote_docker
       - run:
           name: Log in to Docker Hub
           command: docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" 
